Landing page spacing fix

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -426,3 +426,7 @@
     font-family: "Open Sans";
     font-weight: 700;
 }
+
+#first-panel {
+    margin-top: 150px;
+}
